force-app/main/default/objects/Part__c/fields/Add_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Add_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Inventory</label>
    <type>Checkbox</type>
</CustomField>