force-app/main/default/objects/Part__c/fields/Category1__c.field-meta.xml
<CustomField>
    <fullName>Category1__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>API Test</fullName>
            </value>
            <value>
                <fullName>Boat Accessories</fullName>
            </value>
            <value>
                <fullName>Boat Parts</fullName>
            </value>
            <value>
                <fullName>Engine Parts</fullName>
            </value>
            <value>
                <fullName>Snowboards</fullName>
            </value>
            <value>
                <fullName>Wakeboard</fullName>
            </value>
            <value>
                <fullName>Wakesurf</fullName>
            </value>
            <value>
                <fullName>Men</fullName>
            </value>
            <value>
                <fullName>Wake</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>