force-app/main/default/objects/Part__c/fields/Family1__c.field-meta.xml
<CustomField>
    <fullName>Family1__c</fullName>
    <label>Family</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Back Packs</fullName>
            </value>
            <value>
                <fullName>Bindings</fullName>
            </value>
            <value>
                <fullName>Board Racks</fullName>
            </value>
            <value>
                <fullName>Boards</fullName>
            </value>
            <value>
                <fullName>Board Shorts</fullName>
            </value>
            <value>
                <fullName>Boots</fullName>
            </value>
            <value>
                <fullName>Canvas</fullName>
            </value>
            <value>
                <fullName>Dash</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>Fat Sacs</fullName>
            </value>
            <value>
                <fullName>Gel</fullName>
            </value>
            <value>
                <fullName>Handles</fullName>
            </value>
            <value>
                <fullName>Hats</fullName>
            </value>
            <value>
                <fullName>Hoodies</fullName>
            </value>
            <value>
                <fullName>Life Jackets</fullName>
            </value>
            <value>
                <fullName>Lighting</fullName>
            </value>
            <value>
                <fullName>Lower Unit</fullName>
            </value>
            <value>
                <fullName>Ropes</fullName>
            </value>
            <value>
                <fullName>Rub Rail</fullName>
            </value>
            <value>
                <fullName>Running Gear</fullName>
            </value>
            <value>
                <fullName>Steering</fullName>
            </value>
            <value>
                <fullName>Stereo</fullName>
            </value>
            <value>
                <fullName>Surf Boards</fullName>
            </value>
            <value>
                <fullName>Surf Pads</fullName>
            </value>
            <value>
                <fullName>Surf Ropes</fullName>
            </value>
            <value>
                <fullName>Swimsuits</fullName>
            </value>
            <value>
                <fullName>Tee Shirts</fullName>
            </value>
            <value>
                <fullName>Tower</fullName>
            </value>
            <value>
                <fullName>Trans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>