force-app/main/default/objects/Part__c/fields/For_Proshop__c.field-meta.xml
<CustomField>
    <fullName>For_Proshop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Proshop</label>
    <type>Checkbox</type>
</CustomField>