force-app/main/default/objects/Part__c/fields/Manufacturer_PN__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_PN__c</fullName>
    <label>Manufacturer PN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>