force-app/main/default/objects/Part__c/fields/Map_Price__c.field-meta.xml
<CustomField>
    <fullName>Map_Price__c</fullName>
    <inlineHelpText>Specifies the Map Price of the Part, coming from Service Page</inlineHelpText>
    <label>Map Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>