force-app/main/default/objects/Part__c/fields/OEM_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>OEM_Part_Number__c</fullName>
    <label>OEM Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>