force-app/main/default/objects/Part__c/fields/Original_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Original_Manufacturer__c</fullName>
    <label>Original Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>