force-app/main/default/objects/Part__c/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part</label>
    <referenceTo>Part__c</referenceTo>
    <relationshipLabel>Part Variations</relationshipLabel>
    <relationshipName>Part_Variation</relationshipName>
    <type>Lookup</type>
</CustomField>