force-app/main/default/objects/Part__c/fields/Part_Color__c.field-meta.xml
<CustomField>
    <fullName>Part_Color__c</fullName>
    <label>Part Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>