force-app/main/default/objects/Part__c/fields/Part_Cost__c.field-meta.xml
<CustomField>
    <fullName>Part_Cost__c</fullName>
    <label>Part Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>