force-app/main/default/objects/Part__c/fields/Part_Gender__c.field-meta.xml
<CustomField>
    <fullName>Part_Gender__c</fullName>
    <label>Part Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Men</fullName>
            </value>
            <value>
                <fullName>Women</fullName>
            </value>
            <value>
                <fullName>Kids</fullName>
            </value>
            <value>
                <fullName>male</fullName>
            </value>
            <value>
                <fullName>female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>