force-app/main/default/objects/Part__c/fields/Part_Labor__c.field-meta.xml
<CustomField>
    <fullName>Part_Labor__c</fullName>
    <label>Part Labor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>