force-app/main/default/objects/Part__c/fields/Part_Size__c.field-meta.xml
<CustomField>
    <fullName>Part_Size__c</fullName>
    <label>Part Size</label>
    <length>50</length>
    <type>Text</type>
</CustomField>