force-app/main/default/objects/Part__c/fields/Push_Description__c.field-meta.xml
<CustomField>
    <fullName>Push_Description__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Push Description</label>
    <type>Checkbox</type>
</CustomField>