force-app/main/default/objects/Part__c/fields/Push_Image__c.field-meta.xml
<CustomField>
    <fullName>Push_Image__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Push Image</label>
    <type>Checkbox</type>
</CustomField>