force-app/main/default/objects/Part__c/fields/StickIt_Retail_Price__c.field-meta.xml
<CustomField>
    <fullName>StickIt_Retail_Price__c</fullName>
    <formula>Retail_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StickIt Retail Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>