force-app/main/default/objects/Part__c/fields/Sub_Family__c.field-meta.xml
<CustomField>
    <fullName>Sub_Family__c</fullName>
    <label>Sub-Family</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Family1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>Wakesurf Boards</fullName>
            </value>
            <value>
                <fullName>Wakeboards</fullName>
            </value>
            <value>
                <fullName>Ropes &amp; Handles</fullName>
            </value>
            <value>
                <fullName>Pants</fullName>
            </value>
            <value>
                <fullName>Hoodies &amp; Sweatshirts</fullName>
            </value>
            <value>
                <fullName>T-Shirts</fullName>
            </value>
            <value>
                <fullName>Packages</fullName>
            </value>
            <value>
                <fullName>Exhaust Hoses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>