force-app/main/default/objects/Part__c/fields/Superseded_By_Text__c.field-meta.xml
<CustomField>
    <fullName>Superseded_By_Text__c</fullName>
    <label>Superseded By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>