force-app/main/default/objects/Part__c/fields/Taxable__c.field-meta.xml
<CustomField>
    <fullName>Taxable__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Specifies whether the cost of the Part would be inclusive of taxes, or not.</inlineHelpText>
    <label>Taxable</label>
    <type>Checkbox</type>
</CustomField>