force-app/main/default/objects/Part__c/fields/This_is_a_Physical_Product__c.field-meta.xml
<CustomField>
    <fullName>This_is_a_Physical_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>This is a Physical Product</label>
    <type>Checkbox</type>
</CustomField>