force-app/main/default/objects/Part__c/fields/Trade_Price__c.field-meta.xml
<CustomField>
    <fullName>Trade_Price__c</fullName>
    <label>Trade Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>