force-app/main/default/objects/Part__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vendor Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Manufacturer__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Manufacturer__c</referenceTo>
    <relationshipLabel>Parts</relationshipLabel>
    <relationshipName>Parts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>