force-app/main/default/objects/Part__c/fields/Web_Description__c.field-meta.xml
<CustomField>
    <fullName>Web_Description__c</fullName>
    <label>Web Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>