force-app/main/default/objects/Part__c/fields/Web_Description_long__c.field-meta.xml
<CustomField>
    <fullName>Web_Description_long__c</fullName>
    <label>Web Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>