force-app/main/default/objects/Part__c/fields/Web_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Web_Part_Number__c</fullName>
    <formula>Part_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Part Number</label>
    <type>Text</type>
</CustomField>