force-app/main/default/objects/Part__c/fields/Web_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Web_Product_Name__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Product Name</label>
    <type>Text</type>
</CustomField>