force-app/main/default/objects/Part__c/fields/WooCommerce_Id__c.field-meta.xml
<CustomField>
    <fullName>WooCommerce_Id__c</fullName>
    <externalId>true</externalId>
    <label>WooCommerce Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>