force-app/main/default/objects/Part__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vendor_Name__c</columns>
    <columns>Part_Cost__c</columns>
    <columns>Part_Number__c</columns>
    <columns>Dealer_Price__c</columns>
    <columns>Retail_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>