force-app/main/default/objects/Part__c/listViews/Parts_List.listView-meta.xml
<ListView>
    <fullName>Parts_List</fullName>
    <columns>NAME</columns>
    <columns>Part_Number__c</columns>
    <columns>Part_Cost__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Parts List</label>
</ListView>